src/test/ui/inference/infer-arg-test.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/infer-arg-test.rs:7:17
   |
LL | struct BadInfer<_>;
   |                 ^ expected identifier, found reserved identifier

error: expected identifier, found reserved identifier `_`
  --> $DIR/infer-arg-test.rs:13:17
   |
LL | fn bad_infer_fn<_>() {}
   |                 ^ expected identifier, found reserved identifier

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/infer-arg-test.rs:20:15
   |
LL |   let v: [u8; _];
   |               ^ `_` not allowed here

error: in expressions, `_` can only be used on the left-hand side of an assignment
  --> $DIR/infer-arg-test.rs:22:25
   |
LL |   let v: [u8; 10] = [0; _];
   |                         ^ `_` not allowed here

error[E0392]: parameter `_` is never used
  --> $DIR/infer-arg-test.rs:7:17
   |
LL | struct BadInfer<_>;
   |                 ^ unused parameter
   |
   = help: consider removing `_`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `_` to be a const parameter, use `const _: usize` instead

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0392`.
